    this may still be over-ridden.

2007-12-18 cjg
 * Added Export/IDs which is a very simple (and fast) export that just 
    outputs a \n separated list of IDs of the items.

2007-12-19 tdb
 * Session::render_link shouldn't URI escape (should be HTML escaping, which
    the DOM library will do for us), fixing #3197
 * Added methods to parse XML direct from a URL
 * Added 'pid' configuration to Import::DOI, removed use of wget, fixing #3193
    and #2854, and part of #2820

2007-12-20 tdb
 * Removed temporary file usage from PubMedID import script, fixing #2820

2007-12-24 cjg
 * Removed bin/list_user_emails, replacing it with an export plugin to 
    perform the same action.

2008-01-04 cjg
 * Added mtime function to EPrints::Utils
 * Moved update routines for static and view pages into their own modules.
 * views now use a "variations" config option
 * New function to get all eprints ids from a dataset, grouped by a certain 
    field. Used to show how many in a section in views.
 * Writing pages now creates any needed directories.
 * Tweaked the way session renders a subject tree.
 * nb. Some debug code left in this commit

2008-01-09 cjg
 * Added EPrints::Bench -- used for testing speed of sections of code.

2008-01-09 tdb
 * Changed name of ordervalue_single to ordervalue_basic, fixing #3201
 * Added $session and $langid to call to ordervalue_basic, really fixing #3201

2008-01-11 tdb
 * import_subjects should use the import ids, fixing #3209

2008-01-14 tdb
 * Use Text::Unidecode to create sort values, fixing #3200
 * Removed Text::BibTeX dependency, fixing #3202
 * EPrints::Metafield::render_value_withopts now checks definedness by using
    EPrints::Utils::is_set, fixing #2923
 * Added quote_value and quote_identifier methods to Database.pm
 * Replaced all occurences of prep_value with quote_value
 * Replaced all (?) occurences of \" in database values with quote_value
 * Added check for whether the subjects field is configured in MODS (METS)
    export
